home/static/home/home.css
/* Main
   ========================================================================== */

html {
    background-position: center top;
    background-repeat: no-repeat;
    background-size: cover; }
@media (min-device-width: 960px) {
html { background-image: url("/static/tln/img/home_IMG_1008.jpg"); } }
@media (max-device-width: 960px) {
html { background-image: url("/static/tln/img/home_IMG_1008_min.jpg"); } }

body { background-image: none; overflow-x: hidden; height: 100%; }

body > #content-wrap { margin-bottom: 0; height: 100%; }

#header {
    position: relative;
    z-index: 1;
    left: -48%;
    padding-top: 46px;
    padding-bottom: 78px;
    width: auto;
    height: 570px;
    min-height: 396px;
    transform: translateX(50%);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    pointer-events: none; }
@media (max-width: 850px) { #header { left: 0; transform: none; } }
@media (max-width: 600px), (max-height: 650px) {
#header {
    justify-content: flex-start;
    padding-top: 20px;
    padding-bottom: 84px; } }


/* Logos
   ========================================================================== */

#logos {
    position: relative;
    padding: 3px 5px 1px 5px;
    width: 386px;
    background-color: rgba(222, 222, 235, 0.72);
    box-shadow: 0 0 10px 6px rgba(222, 222, 235, 0.82);
    display: flex;
    flex-direction: column;
    align-items: center; }
@media (max-width: 600px), (max-height: 650px) {
#logos { margin-bottom: 20px; width: 250px; } }

#logo-otu { width: 100%; }


/* Site Navigation
   ========================================================================== */

#top-nav-v {
    position: relative;
    max-height: 288px;
    margin-left: 73px;
    align-self: flex-start;
    flex-direction: column;
    background-color: rgba(0, 5, 61, 0.83);
    box-shadow: 0 0 6px 3px rgba(0, 5, 61, 0.9);
    pointer-events: auto; }
#top-nav-v > ul { flex-direction: column; }
#top-nav-v li { width: 100%; }
#top-nav-v li > a { font-size: 56px; color: #e8e8e8; padding: 0 36px; }
#top-nav-v li > a:hover { color: #f7a300; }
#top-nav-v a { transition: all 0.4s ease; }

@media (max-height: 650px) { #top-nav-v { margin-left: 43px; } }
@media (max-width: 850px) { #top-nav-v { margin-left: 0; align-self: initial; } }
@media (max-width: 600px), (max-height: 650px) {
#top-nav-v li > a { padding: 0 20px; line-height: 1.2; font-size: 46px; } }


/* Info Anchor Arrow
   ========================================================================== */

#goto-info {
    position: absolute;
    left: 0;
    bottom: 0.4%;
    padding-right: 0.8%;
    width: 100%;
    text-align: center; }
@media (max-width: 850px) { #goto-info { padding-right: 0; } }
@media (max-height: 432px) { #goto-info { display: none; } }

#goto-info a {
    color: rgba(0, 5, 61, 0.85);
    font-family: "DejaVu Sans";
    font-size: 110px;
    clip-path: rect(48% 84% 88% 16%);
    --text-shadow-size: 3px;
    --text-shadow-blur-radius: 3px;
    --text-shadow-color: rgba(255, 225, 118, 0.7);
    text-shadow:
        var(--text-shadow-size) 0 var(--text-shadow-blur-radius) var(--text-shadow-color),
        0 var(--text-shadow-size) var(--text-shadow-blur-radius) var(--text-shadow-color),
        calc(-1*var(--text-shadow-size)) 0 var(--text-shadow-blur-radius) var(--text-shadow-color),
        0 calc(-1*var(--text-shadow-size)) var(--text-shadow-blur-radius) var(--text-shadow-color);
    transition: color .6s ease, font-size 0.4s ease, text-shadow .2s ease; }
#goto-info a:hover {
    color: rgba(247, 163, 0, 0.8);
    --text-shadow-size: 4px;
    --text-shadow-color: rgba(0, 5, 61, 0.8);
    text-shadow:
        var(--text-shadow-size) 0 var(--text-shadow-blur-radius) var(--text-shadow-color),
        0 var(--text-shadow-size) var(--text-shadow-blur-radius) var(--text-shadow-color),
        calc(-1*var(--text-shadow-size)) 0 var(--text-shadow-blur-radius) var(--text-shadow-color),
        0 calc(-1*var(--text-shadow-size)) var(--text-shadow-blur-radius) var(--text-shadow-color);
}
@media (max-width: 600px) {
#goto-info a {
    font-size: 86px;
    --text-shadow-size: 2px;
    --text-shadow-blur-radius: 2px;
    --text-shadow-color: rgba(255, 225, 118, 0.6);
} }


/* Info
   ========================================================================== */

#content {
    position: absolute;
    left: 0;
    top: 100%;
    min-height: 100lvh;
    box-shadow: inset 0 7px 10px -7px rgba(0, 13, 181, 0.9);
    background-image: url("/static/tln/img/critique_background_content.jpg");
    background-size: 100% auto;
    justify-content: center; }

#info {
    flex: 1;
    padding: 34px 6px 24px 6px;
    max-width: 930px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 170%;
}
@media (min-width: 1200px) { #info { margin-right: 1%; } }
@media (max-width: 920px) { #info { font-size: 120%; } }
@media (max-height: 700px) { #info { justify-content: space-evenly; } }
#info .hseparator { margin: 0 -20px 1px -20px; }
@media (max-width: 1020px) { #info .hseparator { margin: 0px 60px 1px 60px; } }
@media (max-width: 920px) { #info .hseparator { margin: 34px 80px 35px 80px; } }

#info .info-div {
    display: flex;
    flex-direction: row;
    justify-content: center;
}
#info .info-div:first-child { padding-bottom: 10%; }
#info .info-div:last-child { padding-top: 10%; }
@media (max-height: 1000px) {
#info .info-div:first-child { padding-bottom: 30px; }
#info .info-div:last-child { padding-top: 30px; }
}

#info .vseparator {
    margin: -12px 20px;
}

#info ul {
    list-style: none;
    padding-left: 0;
    flex: 1;
}
#info ul:first-child {
    text-align: right;
}

#info ul:first-child li:not(:first-child)::after {
    content: "-";
    padding-left: 10px;
}
#info ul:last-child li:not(:first-child)::before {
    content: "-";
    padding-right: 10px;
}
#info li {
    list-style: none;
    padding: 4px 0;
}
#info li:first-child {
    padding-bottom: 12px;
    font-family: AlegreyaSans, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    text-decoration: underline dotted 2px;
    text-underline-offset: 5px;
}

#info a {
    text-decoration-thickness: 2px;
    text-underline-offset: 3px;
}

@media (max-width: 640px) {
#info {
    margin-left: 2%;
    font-size: 14px;
}
#info .info-div:first-child { padding-bottom: 12px; }
#info .info-div:last-child { padding-top: 12px; }
#info .vseparator {
    margin: -12px 10px;
}
#info ul:first-child li:not(:first-child)::after {
    padding-left: 6px;
}
#info ul:last-child li:not(:first-child)::before {
    padding-right: 6px;
}
#info li {
    list-style: none;
    padding: 3px 0;
}
#info li:first-child {
    padding-bottom: 8px;
    font-family: AlegreyaSans, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    text-decoration: underline dotted 1px;
    text-underline-offset: 2px;
}
#info a {
    text-decoration-thickness: 1px;
    text-underline-offset: 2px;
}
}


/* Animated overlay
   ========================================================================== */

@property --ns-radius {
    syntax: "<length>";
    inherits: true;
    initial-value: 1px;
}

@property --ns-max-feather {
    syntax: "<length>";
    inherits: true;
    initial-value: 200px;
}

#night-sky {
    position: absolute;
    height: 100%;
    box-shadow: inset 0 7px 10px -7px rgba(0, 13, 181, 0.9);
    background-color: black;

    --ns-cycle: 180s;
    --ns-speed-factor: 80;
    --_a: cubic-bezier(.8, .02, .95, .1) forwards;
    animation:
        nsAnimation0 var(--_a) var(--ns-cycle),
        nsAnimation1 var(--_a) calc(var(--ns-cycle)/var(--ns-speed-factor));
    animation-composition: add;

    /* these properties are set with JS because we need the current (x0, y0) anchor position */
    display: none;
    /*
    clip-path: circle(calc(var(--ns-radius) + min(var(--ns-radius), var(--ns-max-feather))) at x0 y0);
    mask-image: radial-gradient(
        circle at x0 y0,
        black,
        black var(--ns-radius),
        transparent calc(var(--ns-radius) + min(var(--ns-radius), var(--ns-max-feather))),
        transparent
    );
    */

    /* the first, slower animation is triggered by JS when the anchor is visible */
    /* then the animation-play-state are toggled when the night sky is hovered on */
    animation-play-state: paused, paused;
}
@media (max-width: 920px) {
#night-sky {
    /* run things faster on mobile */
    --ns-cycle: 120s;
} }

@keyframes nsAnimation0 {
    to { --ns-radius: 100vmax; }
}

@keyframes nsAnimation1 {
    to { --ns-radius: 100vmax; }
}

@property --star-color {
    syntax: "<color>";
    inherits: true;
    initial-value: white;
}

.stars {
    position: absolute;
    top: 0;
    --stars-subgroup-n: 10;
    --animation-duration: 10s;
    animation: twinkle-star var(--animation-duration) cubic-bezier(.7, 0, .3, 1) infinite;

    &:nth-child(1) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 1);
    }

    &:nth-child(2) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 2);
    }

    &:nth-child(3) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 3);
    }

    &:nth-child(4) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 4);
    }

    &:nth-child(5) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 5);
    }

    &:nth-child(6) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 6);
    }

    &:nth-child(7) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 7);
    }

    &:nth-child(8) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 8);
    }

    &:nth-child(9) {
        animation-delay: calc(var(--animation-duration) / var(--stars-subgroup-n) * 9);
    }
}

@keyframes twinkle-star { 25% { opacity: 0; } }

.star {
    --star-color: white;
    fill: var(--star-color);

    &:nth-child(15n) {
        --star-color: #fff6a8;
    }

    &:nth-child(15n + 1) {
        --star-color: #ffdede;
    }
}

.sparks {
    position: absolute;
    top: 0;
}

.spark {
    fill: #ffe2b2;
    opacity: 0;

    --sparks-n: 10;
    --animation-duration: 20s;
    animation: twinkle-spark var(--animation-duration) cubic-bezier(.8, 0, .1, 0) infinite;

    &:nth-child(1) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 1);
    }

    &:nth-child(2) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 2);
    }

    &:nth-child(3) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 3);
    }

    &:nth-child(4) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 4);
    }

    &:nth-child(5) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 5);
    }

    &:nth-child(6) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 6);
    }

    &:nth-child(7) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 7);
    }

    &:nth-child(8) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 8);
    }

    &:nth-child(9) {
        animation-delay: calc(var(--animation-duration) / var(--sparks-n) * 9);
    }
}

@keyframes twinkle-spark {
    14% { opacity: 0; }
    40% { opacity: 1; }
    42% { opacity: 0; }
}

/* downgrade quality for sub-2K screens */
@media (max-width: 1920px) {
.star:not(:nth-child(3n)), .spark:not(:nth-child(3n)) {
    display: none;
}
.stars:nth-child(2n) {
    animation: none;
} }

